tools/vz/pkg/analysis/test-cluster-dumps/coherence-workload/cluster-dump/network-policies.json
{
    "apiVersion": "v1",
    "items": [
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "fleet-agent-local",
                    "meta.helm.sh/release-namespace": "cattle-fleet-local-system",
                    "objectset.rio.cattle.io/applied": "H4sIAAAAAAAA/3yQzWrrMBCF32XWtm/i/Dna30U3pdDSTcliLI0TNYpGaKYNxvjdi3A33WQjdPQdPg6aAJN/pyyeIxiIpHfOVx/PzbWTxvO/7zVUcPXRgYHnhb5w8HaECm6k6FARzAQYIyuq5yglcv9JVoW0yZ4bi6qBis4XzxCItMYzRa17ZhXNmOqlVC8wsMVQyyhKN5grCNhTeGi+oFzAwGbfrtrNcNi1dBjWx+7oun6/a2nVHnvX2v2uQzrY7bZII94IDDga8CtojSHwvZywIEloC384TBLZMovOmUTAfEzzqQIf/8TE7pUCWeUMZprLQ/nCtzFR6cDTb72C/8vlNM8/AQAA//+YfSoLmgEAAA",
                    "objectset.rio.cattle.io/id": "fleet-agent-bootstrap-cattle-fleet-local-system"
                },
                "creationTimestamp": "2022-05-26T22:17:13Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm",
                    "objectset.rio.cattle.io/hash": "362023f752e7f1989d8b652e029bd2c658ae7c44"
                },
                "name": "default-allow-all",
                "namespace": "cattle-fleet-local-system",
                "resourceVersion": "11048",
                "uid": "d117ed01-0f8b-49ba-922d-9a0f91379f0c"
            },
            "spec": {
                "egress": [
                    {}
                ],
                "ingress": [
                    {}
                ],
                "podSelector": {},
                "policyTypes": [
                    "Ingress",
                    "Egress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "cattle-cluster-agent",
                "namespace": "cattle-system",
                "resourceVersion": "5609",
                "uid": "703152e0-3061-4f04-88ad-07ae0c2a08c4"
            },
            "spec": {
                "podSelector": {
                    "matchLabels": {
                        "app": "cattle-cluster-agent"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "rancher",
                "namespace": "cattle-system",
                "resourceVersion": "5613",
                "uid": "c291c22a-4bdd-4719-8f23-aa0dfc97a5f2"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "cattle-system"
                                    }
                                }
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "ingress-nginx"
                                    }
                                }
                            },
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "app.kubernetes.io/instance": "ingress-controller"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 80,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "rancher"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "rancher-webhook",
                "namespace": "cattle-system",
                "resourceVersion": "5614",
                "uid": "5c183388-357f-4fcb-870d-c4bf24d3e184"
            },
            "spec": {
                "ingress": [
                    {
                        "ports": [
                            {
                                "port": 9443,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "rancher-webhook"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "cert-manager",
                "namespace": "cert-manager",
                "resourceVersion": "5610",
                "uid": "82b5f485-32c5-4f6e-80bc-813a136f837a"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 9402,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "cert-manager"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "external-dns",
                "namespace": "cert-manager",
                "resourceVersion": "5611",
                "uid": "abb6179c-90b8-4808-9b6f-46818fbe19d3"
            },
            "spec": {
                "podSelector": {
                    "matchLabels": {
                        "app.kubernetes.io/instance": "external-dns"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "ingress-nginx-controller",
                "namespace": "ingress-nginx",
                "resourceVersion": "5617",
                "uid": "985159a0-de03-4d6f-b45b-23cd9b491fab"
            },
            "spec": {
                "ingress": [
                    {
                        "ports": [
                            {
                                "port": 443,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 80,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 10254,
                                "protocol": "TCP"
                            },
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app.kubernetes.io/component": "controller"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "ingress-nginx-default-backend",
                "namespace": "ingress-nginx",
                "resourceVersion": "5616",
                "uid": "67b91c19-3561-4c6f-9a5c-bccea01edae0"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "app.kubernetes.io/component": "controller"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 8080,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app.kubernetes.io/component": "default-backend"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "allow-same-namespace",
                "namespace": "istio-system",
                "resourceVersion": "5612",
                "uid": "984d152d-b7af-411d-b076-fcdf116e9e80"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "podSelector": {}
                            }
                        ]
                    }
                ],
                "podSelector": {},
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "istio-egressgateway",
                "namespace": "istio-system",
                "resourceVersion": "5622",
                "uid": "9766116d-9d88-4610-b243-4edb26a4c841"
            },
            "spec": {
                "ingress": [
                    {
                        "ports": [
                            {
                                "port": 8443,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "istio-egressgateway"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "istio-ingressgateway",
                "namespace": "istio-system",
                "resourceVersion": "5619",
                "uid": "b2b3b221-6234-4c82-83e7-20ee5c6f6d5b"
            },
            "spec": {
                "ingress": [
                    {
                        "ports": [
                            {
                                "port": 8443,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "istio-ingressgateway"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "istiocoredns",
                "namespace": "istio-system",
                "resourceVersion": "5618",
                "uid": "2a35fbc4-9aff-49d5-8655-e7bcfee8e7ea"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "kube-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "k8s-app": "kube-dns"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 53,
                                "protocol": "UDP"
                            },
                            {
                                "port": 53,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "istiocoredns"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "istiod-access",
                "namespace": "istio-system",
                "resourceVersion": "5620",
                "uid": "70b8f7db-7850-4fd9-8d4f-1c848256cefe"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "istio-injection": "enabled",
                                        "verrazzano-managed": "true"
                                    }
                                }
                            },
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "k8s-app": "verrazzano-monitoring-operator"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15012,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "istio-injection": "enabled",
                                        "verrazzano-managed": "true"
                                    }
                                }
                            },
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchExpressions": [
                                        {
                                            "key": "app",
                                            "operator": "In",
                                            "values": [
                                                "system-prometheus",
                                                "fluentd",
                                                "verrazzano-authproxy",
                                                "verrazzano-console",
                                                "system-es-master",
                                                "system-es-ingest",
                                                "system-es-data",
                                                "system-grafana",
                                                "system-kibana",
                                                "weblogic-operator",
                                                "kiali"
                                            ]
                                        }
                                    ]
                                }
                            },
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "keycloak"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app.kubernetes.io/name": "keycloak"
                                    }
                                }
                            },
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "keycloak"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "mysql"
                                    }
                                }
                            },
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "ingress-nginx"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app.kubernetes.io/name": "ingress-nginx"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15012,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "ports": [
                            {
                                "port": 15017,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15014,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "istiod"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "keycloak",
                "namespace": "keycloak",
                "resourceVersion": "5623",
                "uid": "3fd86beb-5c04-4e70-9f5f-eaef203fb731"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "ingress-nginx"
                                    }
                                }
                            },
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "app.kubernetes.io/instance": "ingress-controller"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 8080,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 8080,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app.kubernetes.io/name": "keycloak"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "keycloak-mysql",
                "namespace": "keycloak",
                "resourceVersion": "5624",
                "uid": "c4d2dd45-1dc2-429b-8108-9ad378e578c9"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "app.kubernetes.io/name": "keycloak"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 3306,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "mysql"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "node-exporter",
                "namespace": "monitoring",
                "resourceVersion": "5625",
                "uid": "2143ba83-c721-4b56-a122-e5dc4d598234"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 9100,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "node-exporter"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "creationTimestamp": "2022-05-26T22:08:29Z",
                "generation": 1,
                "name": "verrazzano-platform-operator",
                "namespace": "verrazzano-install",
                "resourceVersion": "2827",
                "uid": "a3b6e79d-c91a-4814-afba-34aa9598c4e3"
            },
            "spec": {
                "egress": [
                    {
                        "ports": [
                            {
                                "port": 53,
                                "protocol": "TCP"
                            },
                            {
                                "port": 53,
                                "protocol": "UDP"
                            }
                        ],
                        "to": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "kube-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "k8s-app": "kube-dns"
                                    }
                                }
                            }
                        ]
                    },
                    {
                        "ports": [
                            {
                                "port": 6443,
                                "protocol": "TCP"
                            }
                        ],
                        "to": [
                            {
                                "ipBlock": {
                                    "cidr": "10.0.0.10/32"
                                }
                            }
                        ]
                    },
                    {
                        "ports": [
                            {
                                "port": 443,
                                "protocol": "TCP"
                            }
                        ],
                        "to": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "ingress-nginx"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app.kubernetes.io/instance": "ingress-controller"
                                    }
                                }
                            }
                        ]
                    }
                ],
                "ingress": [
                    {
                        "ports": [
                            {
                                "port": 9443,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "verrazzano-platform-operator"
                    }
                },
                "policyTypes": [
                    "Egress",
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "coherence-operator",
                "namespace": "verrazzano-system",
                "resourceVersion": "5600",
                "uid": "d5f05672-bf40-4008-b36e-2b9dcb12d6d1"
            },
            "spec": {
                "ingress": [
                    {
                        "ports": [
                            {
                                "port": 9443,
                                "protocol": "TCP"
                            },
                            {
                                "port": 8000,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "control-plane": "coherence"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "kiali",
                "namespace": "verrazzano-system",
                "resourceVersion": "5621",
                "uid": "edea1c74-7939-47ba-8c60-f7e014b91735"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "verrazzano-authproxy"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 20001,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 9090,
                                "protocol": "TCP"
                            },
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "kiali"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "oam-kubernetes-runtime",
                "namespace": "verrazzano-system",
                "resourceVersion": "5601",
                "uid": "0e7274c5-1be7-4699-9751-bc726d097cfc"
            },
            "spec": {
                "podSelector": {
                    "matchLabels": {
                        "app.kubernetes.io/name": "oam-kubernetes-runtime"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "verrazzano-application-operator",
                "namespace": "verrazzano-system",
                "resourceVersion": "5605",
                "uid": "3353cc40-ea08-4777-ac4e-036e9aaede2d"
            },
            "spec": {
                "ingress": [
                    {
                        "ports": [
                            {
                                "port": 9443,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "verrazzano-application-operator"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "verrazzano-authproxy",
                "namespace": "verrazzano-system",
                "resourceVersion": "5606",
                "uid": "36e26f5d-5e23-466b-be1c-7403aa8871d9"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "ingress-nginx"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app.kubernetes.io/instance": "ingress-controller"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 8775,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "fluentd"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 8775,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "verrazzano-authproxy"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "verrazzano-console",
                "namespace": "verrazzano-system",
                "resourceVersion": "5604",
                "uid": "0f2c720e-94e3-494b-a56e-6a719c0bf524"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "verrazzano-authproxy"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 8000,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "verrazzano-console"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano-monitoring-operator",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:58Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "verrazzano-monitoring-operator",
                "namespace": "verrazzano-system",
                "resourceVersion": "5787",
                "uid": "6b8dfee0-3b5e-4737-a7b5-594c405c5e85"
            },
            "spec": {
                "podSelector": {
                    "matchLabels": {
                        "k8s-app": "verrazzano-monitoring-operator"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "vmi-system-es-master",
                "namespace": "verrazzano-system",
                "resourceVersion": "5615",
                "uid": "c6d045c6-57f4-4c79-93e8-9c1601fcbf97"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "k8s-app": "verrazzano-monitoring-operator"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 9200,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "verrazzano-authproxy"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 9200,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-kibana"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 9200,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "opensearch.verrazzano.io/role-master": "true"
                                    }
                                }
                            }
                        ]
                    },
                    {
                        "ports": [
                            {
                                "port": 9200,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "opensearch.verrazzano.io/role-master": "true"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "vmi-system-grafana",
                "namespace": "verrazzano-system",
                "resourceVersion": "5607",
                "uid": "7320712c-2bcf-49cc-86eb-16b008c1d63d"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "verrazzano-authproxy"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 3000,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "system-grafana"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "vmi-system-kibana",
                "namespace": "verrazzano-system",
                "resourceVersion": "5603",
                "uid": "36464473-2177-4f13-947a-86e83226befb"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "k8s-app": "verrazzano-monitoring-operator"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 5601,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "verrazzano-authproxy"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 5601,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "system-kibana"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "vmi-system-prometheus",
                "namespace": "verrazzano-system",
                "resourceVersion": "5608",
                "uid": "75504eb0-7140-4ddd-ae59-36493d8ba1d9"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "verrazzano-authproxy"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 9090,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-grafana"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 9090,
                                "protocol": "TCP"
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "kiali"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 9090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "system-prometheus"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "meta.helm.sh/release-name": "verrazzano",
                    "meta.helm.sh/release-namespace": "verrazzano-system"
                },
                "creationTimestamp": "2022-05-26T22:11:52Z",
                "generation": 1,
                "labels": {
                    "app.kubernetes.io/managed-by": "Helm"
                },
                "name": "weblogic-operator",
                "namespace": "verrazzano-system",
                "resourceVersion": "5602",
                "uid": "7aabbcc0-33ca-4939-8e97-d71ab8dafa2e"
            },
            "spec": {
                "ingress": [
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "istio-system"
                                    }
                                }
                            }
                        ]
                    },
                    {
                        "from": [
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "verrazzano.io/namespace": "verrazzano-system"
                                    }
                                },
                                "podSelector": {
                                    "matchLabels": {
                                        "app": "system-prometheus"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 15090,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "app": "weblogic-operator"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        }
    ],
    "kind": "List",
    "metadata": {
        "resourceVersion": "",
        "selfLink": ""
    }
}
